<resources>
    <string name="app_name">SOPTHUB</string>
    <string name="app_title">SOPT</string>
    <string name="text_user_id">Github 아이디</string>
    <string name="text_user_id_hint">Github 아이디를 입력해주세요</string>
    <string name="text_user_password">비밀번호</string>
    <string name="text_user_password_hint">비밀번호를 입력해주세요</string>
    <string name="text_sign_in">LOGIN</string>
    <string name="text_sign_up">SIGN UP</string>
    <string name="text_user_name">이름</string>
    <string name="text_user_name_hint">이름을 입력해주세요</string>
    <string name="description_profile_image">ProfileImage</string>
    <string name="text_edit_profile">EDIT PROFILE</string>
    <string name="text_save">SAVE</string>
    <string name="text_user_age">나이</string>
    <string name="text_user_mbti">MBTI</string>
    <string name="text_user_description">자기소개</string>
    <string name="text_user_age_hint">나이를 입력해주세요</string>
    <string name="text_user_mbti_hint">MBTI를 입력해주세요</string>
    <string name="text_user_description_hint">자기소개를 입력해주세요</string>
    <string name="text_profile_follower">FOLLOWER</string>
    <string name="text_profile_repository">REPOSITORY</string>
    <string name="text_fold">접기/펴기</string>
    <string name="text_sign_out">SIGN OUT</string>
    <string name="text_item_delete">DELETE</string>
    <string name="text_init">데이터 초기화</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_profile">프로필</string>
    <string name="text_home">홈</string>
    <string name="text_more">더보기</string>
    <string name="text_on_boarding">WELCOME</string>
    <string name="text_on_boarding_first">온</string>
    <string name="text_next">next</string>
    <string name="text_on_boarding_second">보</string>
    <string name="text_on_boarding_third">딩</string>
    <string name="text_start">start</string>
</resources>