<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="co.kr.sopt_seminar_30th.presentation.viewmodel.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        tools:context=".presentation.ui.home.profile.EditProfileFragment">

        <ScrollView
            android:id="@+id/sv_profile"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@id/btn_turn_off_auto_login"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_profile_image"
                    setProfileImageUri="@{viewmodel.userImage}"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:contentDescription="@string/description_profile_image"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toTopOf="@id/tv_profile_age"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.33" />

                <TextView
                    android:id="@+id/tv_profile_age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/text_user_age"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="@id/et_profile_age"
                    app:layout_constraintEnd_toStartOf="@id/et_profile_age"
                    app:layout_constraintHorizontal_bias="1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/et_profile_age" />

                <EditText
                    android:id="@+id/et_profile_age"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/text_user_age_hint"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:maxLength="3"
                    android:text="@={viewmodel.userAge}"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@id/et_profile_mbti"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/et_profile_description"
                    app:layout_constraintTop_toBottomOf="@id/iv_profile_image" />

                <TextView
                    android:id="@+id/tv_profile_mbti"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/text_user_mbti"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="@id/et_profile_mbti"
                    app:layout_constraintEnd_toStartOf="@id/et_profile_mbti"
                    app:layout_constraintHorizontal_bias="1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/et_profile_mbti" />

                <EditText
                    android:id="@+id/et_profile_mbti"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/text_user_mbti_hint"
                    android:importantForAutofill="no"
                    android:inputType="textCapCharacters"
                    android:maxLength="4"
                    android:text="@={viewmodel.userMbti}"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@id/et_profile_description"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/et_profile_description"
                    app:layout_constraintTop_toBottomOf="@id/et_profile_age" />

                <TextView
                    android:id="@+id/tv_profile_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/text_user_description"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@id/et_profile_description"
                    app:layout_constraintEnd_toStartOf="@id/et_profile_description"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/et_profile_description" />

                <EditText
                    android:id="@+id/et_profile_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/text_user_description_hint"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:scrollHorizontally="false"
                    android:text="@={viewmodel.userDescription}"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tv_profile_description"
                    app:layout_constraintTop_toBottomOf="@id/et_profile_mbti" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <Button
            android:id="@+id/btn_turn_off_auto_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text_turn_off_auto_login"
            app:layout_constraintBottom_toTopOf="@id/btn_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sv_profile"
            android:backgroundTint="@color/purple_700"
            app:layout_constraintWidth_percent="0.8"/>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text_save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_turn_off_auto_login"
            app:layout_constraintWidth_percent="0.8" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>